@@ -10,7 +10,7 @@
  * 
  * Author:  Marco van Wieringen <mvw@planets.elm.net>
  *
- * Version: $Id: warnquota.c,v 1.31 2008/07/09 15:26:37 jkar8572 Exp $
+ * Version: $Id: warnquota.c,v 1.32 2008/08/13 15:52:17 jkar8572 Exp $
  *
  *          This program is free software; you can redistribute it and/or
  *          modify it under the terms of the GNU General Public License as
@@ -1061,8 +1061,8 @@ static void get_host_name(void)
 
 	if (uname(&uts))
 		die(1, _("Cannot get host name: %s\n"), strerror(errno));
-	hostname = uts.nodename;
-	domainname = uts.domainname;
+	hostname = sstrdup(uts.nodename);
+	domainname = sstrdup(uts.domainname);
 }
 
 int main(int argc, char **argv)
